--- a/Demos/Portus iOS-Demo/Portus iOS-Demo/ScreenFlows/FlowA/FlowA.storyboard
+++ b/Demos/Portus iOS-Demo/Portus iOS-Demo/ScreenFlows/FlowA/FlowA.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -377,22 +377,8 @@
                                     <action selector="animationExtentValueChanged" destination="wTP-Wt-jdE" eventType="primaryActionTriggered" id="Aql-Qb-klW"/>
                                 </connections>
                             </segmentedControl>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CD7-0X-T6b">
-                                <rect key="frame" x="16" y="97" width="343" height="28"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="27" id="LwE-Yz-Hf7"/>
-                                </constraints>
-                                <segments>
-                                    <segment title="alwaysFromRoot"/>
-                                    <segment title="maxReusageFromRoot"/>
-                                    <segment title="minRouteToLeaf"/>
-                                </segments>
-                                <connections>
-                                    <action selector="routingStrategyValueChanged" destination="wTP-Wt-jdE" eventType="primaryActionTriggered" id="RHr-es-9Yx"/>
-                                </connections>
-                            </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Path" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kJN-b0-wbY">
-                                <rect key="frame" x="16" y="144" width="343" height="80"/>
+                                <rect key="frame" x="16" y="97" width="343" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="9tH-ji-cmC"/>
                                 </constraints>
@@ -407,23 +393,19 @@
                             <constraint firstItem="Dpy-JN-JHi" firstAttribute="trailing" secondItem="UBc-EF-Nn2" secondAttribute="trailing" constant="4" id="KsI-9U-XiZ"/>
                             <constraint firstItem="a40-SF-s4V" firstAttribute="centerY" secondItem="Dpy-JN-JHi" secondAttribute="centerY" id="SSm-0n-qpo"/>
                             <constraint firstItem="UBc-EF-Nn2" firstAttribute="leading" secondItem="Dpy-JN-JHi" secondAttribute="leading" constant="4" id="W1r-WT-ZMZ"/>
-                            <constraint firstItem="CD7-0X-T6b" firstAttribute="top" secondItem="pqh-Yc-dtB" secondAttribute="bottom" constant="20" id="ecw-dG-ymk"/>
                             <constraint firstItem="kJN-b0-wbY" firstAttribute="leading" secondItem="Dpy-JN-JHi" secondAttribute="leading" constant="16" id="fWZ-Q6-qu4"/>
-                            <constraint firstItem="Dpy-JN-JHi" firstAttribute="trailing" secondItem="CD7-0X-T6b" secondAttribute="trailing" constant="16" id="gnE-Iy-qn5"/>
                             <constraint firstItem="Dpy-JN-JHi" firstAttribute="trailing" secondItem="kJN-b0-wbY" secondAttribute="trailing" constant="16" id="hGo-uD-xce"/>
                             <constraint firstItem="Dpy-JN-JHi" firstAttribute="bottom" secondItem="UBc-EF-Nn2" secondAttribute="bottom" constant="4" id="hQb-tc-wDi"/>
                             <constraint firstItem="Dpy-JN-JHi" firstAttribute="trailing" secondItem="pqh-Yc-dtB" secondAttribute="trailing" constant="16" id="k40-Vf-CoF"/>
                             <constraint firstItem="a40-SF-s4V" firstAttribute="centerX" secondItem="Dpy-JN-JHi" secondAttribute="centerX" id="pDb-LN-gXx"/>
                             <constraint firstItem="pqh-Yc-dtB" firstAttribute="top" secondItem="Dpy-JN-JHi" secondAttribute="top" constant="30" id="roU-cG-zXG"/>
-                            <constraint firstItem="kJN-b0-wbY" firstAttribute="top" secondItem="CD7-0X-T6b" secondAttribute="bottom" constant="20" id="tQf-ix-f9h"/>
-                            <constraint firstItem="CD7-0X-T6b" firstAttribute="leading" secondItem="Dpy-JN-JHi" secondAttribute="leading" constant="16" id="xIV-H1-VnQ"/>
+                            <constraint firstItem="kJN-b0-wbY" firstAttribute="top" secondItem="pqh-Yc-dtB" secondAttribute="bottom" constant="20" id="wgq-Oh-9my"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Dpy-JN-JHi"/>
                     </view>
                     <connections>
                         <outlet property="animationExtentSegmentedControl" destination="pqh-Yc-dtB" id="7Wl-As-TSs"/>
                         <outlet property="currentPathLabel" destination="kJN-b0-wbY" id="y42-zr-hDV"/>
-                        <outlet property="routingStrategySegmentedControl" destination="CD7-0X-T6b" id="RUM-9S-GEP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Koq-cd-BAn" userLabel="First Responder" sceneMemberID="firstResponder"/>
