--- a/Demos/Portus iOS-Demo2/Portus iOS-Demo2/B/ViewControllerB.storyboard
+++ b/Demos/Portus iOS-Demo2/Portus iOS-Demo2/B/ViewControllerB.storyboard
@@ -19,32 +19,44 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2Ej-Ou-6AG">
-                                <rect key="frame" x="192" y="358" width="30" height="180"/>
+                                <rect key="frame" x="192" y="322" width="30" height="252"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FHw-sn-YKy">
-                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                                        <state key="normal" title="a"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="a">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="buttonTriggered:" destination="OB6-Z1-MY4" eventType="touchUpInside" id="kD6-Wf-c58"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SuH-gm-uf9">
-                                        <rect key="frame" x="0.0" y="50" width="30" height="30"/>
-                                        <state key="normal" title="b"/>
+                                        <rect key="frame" x="0.0" y="68" width="30" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="b">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="buttonTriggered:" destination="OB6-Z1-MY4" eventType="touchUpInside" id="Uey-jz-XYW"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ke6-U5-2oA">
-                                        <rect key="frame" x="0.0" y="100" width="30" height="30"/>
-                                        <state key="normal" title="c"/>
+                                        <rect key="frame" x="0.0" y="136" width="30" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="c">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="buttonTriggered:" destination="OB6-Z1-MY4" eventType="touchUpInside" id="KUj-9u-rcK"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8jB-hV-D88">
-                                        <rect key="frame" x="0.0" y="150" width="30" height="30"/>
-                                        <state key="normal" title="d"/>
+                                        <rect key="frame" x="0.0" y="204" width="30" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="d">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <action selector="buttonTriggered:" destination="OB6-Z1-MY4" eventType="touchUpInside" id="R5K-T2-YYV"/>
                                         </connections>
@@ -52,7 +64,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="B" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vbW-by-2eR">
-                                <rect key="frame" x="0.0" y="264" width="414" height="54"/>
+                                <rect key="frame" x="0.0" y="228" width="414" height="54"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
