--- a/Demos/Portus iOS-Demo2/Portus iOS-Demo2/TabBar/ThirdTab/PageA/PageAViewController.storyboard
+++ b/Demos/Portus iOS-Demo2/Portus iOS-Demo2/TabBar/ThirdTab/PageA/PageAViewController.storyboard
@@ -19,8 +19,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ojZ-M3-eWF">
-                                <rect key="frame" x="192" y="433" width="30" height="30"/>
-                                <state key="normal" title="a"/>
+                                <rect key="frame" x="192" y="416.5" width="30" height="63"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                <state key="normal" title="a">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="aTriggered:" destination="ybQ-oQ-uaj" eventType="touchUpInside" id="YDI-Oz-gPK"/>
                                 </connections>
