--- a/docs/docsets/Portus.docset/Contents/Resources/Documents/css/jazzy.css
+++ b/docs/docsets/Portus.docset/Contents/Resources/Documents/css/jazzy.css
@@ -219,10 +219,7 @@ header {
   .item .token, .item .direct-link {
     padding-left: 3px;
     margin-left: 15px;
-    font-size: 11.9px;
-    transition: all 300ms; }
-  .item .token-open {
-    margin-left: 0px; }
+    font-size: 11.9px; }
   .item .discouraged {
     text-decoration: line-through; }
   .item .declaration-note {
